--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'realm-android'
 
 android {
     compileSdkVersion 25
@@ -27,6 +28,14 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.0.1'
     compile 'com.android.support:recyclerview-v7:25.0.1'
     compile "com.android.support:cardview-v7:25.0.1"
+
+    //RETROFIT
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+
+    //REALM
+    compile 'io.realm:android-adapters:1.4.1'
+    compile 'com.github.thorbenprimke:realm-recyclerview:0.9.25'
 
     testCompile 'junit:junit:4.12'
 }
