--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,12 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
-        maven { url "https://jitpack.io" }
+        maven {
+            url "https://jitpack.io"
+        }
+        maven {
+            url 'http://repository.adincube.com/maven'
+        }
     }
 }
 
