retrieve of configuration and sounds from network

--- a/app/src/main/assets/config
+++ b/app/src/main/assets/config
@@ -1,5 +1,5 @@
 {
-"title": "La boîte à Gogol",
+"title": "La boîte à Baptiste",
 "package": "com.monirapps.boiteabaptiste",
 "updated": 1489222483,
 "url": "/",
