--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,5 +50,8 @@ dependencies {
     //MULTIDEX
     compile 'com.android.support:multidex:1.0.1'
 
+    //GLIDE
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+
     testCompile 'junit:junit:4.12'
 }
