--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,10 +28,10 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.1.0'
-    compile 'com.android.support:recyclerview-v7:25.1.0'
-    compile "com.android.support:cardview-v7:25.1.0"
-    compile "com.android.support:design:25.1.0"
+    compile 'com.android.support:appcompat-v7:25.3.0'
+    compile 'com.android.support:recyclerview-v7:25.3.0'
+    compile "com.android.support:cardview-v7:25.3.0"
+    compile "com.android.support:design:25.3.0"
 
     //RETROFIT
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
@@ -42,11 +42,11 @@ dependencies {
     compile 'com.github.thorbenprimke:realm-recyclerview:0.9.25'
 
     //ADINCUBE
-    compile ('com.adincube.sdk:AdinCube-Java-6fbf:1.+@aar') {
+    compile ('com.adincube.sdk:AdinCube-Java-6fbf:1.12.0@aar') {
         transitive = true
         exclude group: 'com.google.android.gms'
     }
-    compile('com.adincube.sdk:AdinCube-Native-RecyclerView-Extension:1.+') {
+    compile('com.adincube.sdk:AdinCube-Native-RecyclerView-Extension:1.1.5') {
         transitive = true
     }
 
@@ -63,6 +63,9 @@ dependencies {
     //ONE SIGNAL/
     compile 'com.onesignal:OneSignal:3.4.3@aar'
     compile 'com.google.android.gms:play-services-gcm:10.0.1'
+
+    //LOTTIE
+    compile 'com.airbnb.android:lottie:1.5.3'
 
     testCompile 'junit:junit:4.12'
 }
