--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,8 @@
                       android:pathPrefix="/${deeplink}/index" />
             </intent-filter>
         </activity>
-    </application>
 
+        <meta-data android:name="android.max_aspect" android:value="2.1" />
+
+    </application>
 </manifest>
