--- a/app/build.gradle
+++ b/app/build.gradle
@@ -158,6 +158,13 @@ dependencies {
     //RATING BAR
     compile 'me.zhanghai.android.materialratingbar:library:1.0.2'
 
+    //PERMISSION DISPATCHER
+    compile 'com.github.hotchemi:permissionsdispatcher:2.3.2'
+    annotationProcessor 'com.github.hotchemi:permissionsdispatcher-processor:2.3.2'
+
+    //SNACKBAR
+    compile 'com.github.matecode:Snacky:1.0.2'
+
     testCompile 'junit:junit:4.12'
 }
 
