--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
     defaultConfig {
         minSdkVersion 15
         targetSdkVersion 25
-        versionCode 8
-        versionName "2.1"
+        versionCode 9
+        versionName "2.2"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
     }
@@ -134,6 +134,27 @@ android {
             manifestPlaceholders = [onesignal_app_id: "55749e22-971b-4827-8cc8-aad55109ea60",
                                     onesignal_google_project_number: "566316335009",
                                     deeplink: "thekairi"]
+        }
+        lepen {
+            applicationId "com.monirapps.boitealepen"
+            buildConfigField "String", "ENDPOINT_SUFFIX", '"lepen"'
+            manifestPlaceholders = [onesignal_app_id: "0f56251c-9c70-4830-ae32-b848ce0315d9",
+                                    onesignal_google_project_number: "489043607003",
+                                    deeplink: "lepen"]
+        }
+        risitas {
+            applicationId "com.monirapps.boitearisitas"
+            buildConfigField "String", "ENDPOINT_SUFFIX", '"risitas"'
+            manifestPlaceholders = [onesignal_app_id: "517797f5-f736-4e9b-9046-2a2308fbdf6a",
+                                    onesignal_google_project_number: "1046102945467",
+                                    deeplink: "risitas"]
+        }
+        lopez {
+            applicationId "com.monirapps.boitealopez"
+            buildConfigField "String", "ENDPOINT_SUFFIX", '"lopez"'
+            manifestPlaceholders = [onesignal_app_id: "c961793a-ae86-4afb-ac23-9c1e4cce0ee1",
+                                    onesignal_google_project_number: "921114931573",
+                                    deeplink: "lopez"]
         }
     }
 }
