--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,11 +2,11 @@ apply plugin: 'com.android.application'
 apply plugin: 'realm-android'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.0"
+    compileSdkVersion 27
     defaultConfig {
         minSdkVersion 15
-        targetSdkVersion 25
+        targetSdkVersion 27
+        flavorDimensions "default"
         versionCode 13
         versionName "2.3.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -181,61 +181,56 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    compile 'com.android.support:appcompat-v7:25.3.0'
-    compile 'com.android.support:recyclerview-v7:25.3.0'
-    compile "com.android.support:cardview-v7:25.3.0"
-    compile "com.android.support:design:25.3.0"
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support:recyclerview-v7:27.1.1'
+    implementation "com.android.support:cardview-v7:27.1.1"
+    implementation "com.android.support:design:27.1.1"
 
     //RETROFIT
-    compile 'com.squareup.retrofit2:retrofit:2.1.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.1.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
 
     //REALM
-    compile 'io.realm:android-adapters:1.4.1'
-    compile 'com.github.thorbenprimke:realm-recyclerview:0.9.25'
-    compile 'io.realm:android-adapters:1.4.1'
+    implementation 'io.realm:android-adapters:1.4.1'
+    implementation 'com.github.thorbenprimke:realm-recyclerview:0.9.25'
+    implementation 'io.realm:android-adapters:1.4.1'
 
     //ADINCUBE
-    compile ('com.adincube.sdk:AdinCube-Java-11efbf:1.12.8@aar') {
+    implementation ('com.adincube.sdk:AdinCube-Java-11efbf:1.12.8@aar') {
         transitive = true
         exclude group: 'com.google.android.gms'
     }
 
     //MULTIDEX
-    compile 'com.android.support:multidex:1.0.1'
+    implementation 'com.android.support:multidex:1.0.3'
 
     //GLIDE
-    compile 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
 
     //FIREBASE
-    compile 'com.google.firebase:firebase-core:10.0.1'
-    compile 'com.google.firebase:firebase-crash:10.0.1'
+    implementation 'com.google.firebase:firebase-core:15.0.0'
+    implementation 'com.google.firebase:firebase-crash:15.0.0'
 
     //ONE SIGNAL/
-    compile 'com.onesignal:OneSignal:3.4.3@aar'
-    compile 'com.google.android.gms:play-services-gcm:10.0.1'
+    implementation 'com.onesignal:OneSignal:3.4.3@aar'
+    implementation 'com.google.android.gms:play-services-gcm:15.0.0'
 
     //LOTTIE
-    compile 'com.airbnb.android:lottie:1.5.3'
+    implementation 'com.airbnb.android:lottie:1.5.3'
 
     //RECYCLER VIEW ANIMS
-    compile 'jp.wasabeef:recyclerview-animators:2.2.6'
+    implementation 'jp.wasabeef:recyclerview-animators:2.2.6'
 
     //RATING BAR
-    compile 'me.zhanghai.android.materialratingbar:library:1.0.2'
+    implementation 'me.zhanghai.android.materialratingbar:library:1.0.2'
 
     //PERMISSION DISPATCHER
-    compile 'com.github.hotchemi:permissionsdispatcher:2.3.2'
+    implementation 'com.github.hotchemi:permissionsdispatcher:2.3.2'
     annotationProcessor 'com.github.hotchemi:permissionsdispatcher-processor:2.3.2'
 
     //SNACKBAR
-    compile 'com.github.matecode:Snacky:1.0.2'
-
-    testCompile 'junit:junit:4.12'
+    implementation 'com.github.matecode:Snacky:1.0.2'
 }
 
 apply plugin: 'com.google.gms.google-services'
